--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^3.0.2",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11"
+  },
   "devDependencies": {
-    "body-parser": "^1.18.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.9",
+    "node-restful": "^0.2.6",
+    "nodemon": "^1.18.6",
+    "pm2": "^3.2.2"
   }
 }
