--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
+    "pg": "^7.6.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.41.0"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
