--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.6.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.41.0"
+    "pg-promise": "^8.5.2"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
